5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1807_2563.log
== TEST (2019-06-11 16:17:51) 
-- CODE:
from numpy import *
vet = (array(eval(input("vetor:"))))

nmoni=0

while(size(vet) > 1):
	for i in vet:
		if(vet[i]>=5 and vet[i]<7):
			nmoni = nmoni + 1
	print(nmoni)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:18:53) 
-- CODE:
from numpy import *
vet = (array(eval(input("vetor:"))))

nmoni=0

while(size(vet) > 1):
	for i in vet:
		if((vet[i]>=5)and (vet[i]<7)):
			nmoni = nmoni + 1
	print(nmoni)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:22:12) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in vet:
		if((media[i]>=5)and (media[i]<7)):
			nmoni = nmoni + 1
	print(nmoni)
	
	media = (array(eval(input("vetor:"))))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:22:55) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in media:
		if((media[i]>=5)and (media[i]<7)):
			nmoni = nmoni + 1
	print(nmoni)
	
	media = (array(eval(input("vetor:"))))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:28:10) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(media):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	
	media = (array(eval(input("vetor:"))))

-- EXECUTION TIME:
0.980916
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 7, in <module>
    for i in range(media):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:29:36) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	
	media = (array(eval(input("vetor:"))))

-- EXECUTION TIME:
0.835726
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
3
5
7
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
2
4
6
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
1
3
5
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:29:42) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	
	media = (array(eval(input("vetor:"))))

-- EXECUTION TIME:
1.81162
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
3
5
7
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
vetor:2
vetor:4
vetor:6
vetor:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
vetor:2
vetor:3
vetor:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:29:43) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	
	media = (array(eval(input("vetor:"))))

-- EXECUTION TIME:
2.83563
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2563/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:29:45) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	
	media = (array(eval(input("vetor:"))))

-- EXECUTION TIME:
2.53551
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
vetor:2
vetor:4
vetor:6
vetor:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
vetor:2
vetor:3
vetor:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:29:49) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	
	media = (array(eval(input("vetor:"))))

-- EXECUTION TIME:
3.01031
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
3
5
7
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
2
4
6
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
2
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:29:49) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	
	media = (array(eval(input("vetor:"))))

-- EXECUTION TIME:
2.51641
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2563/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:29:55) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	
	media = (array(eval(input("vetor:"))))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:31:22) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	
	media = (array(eval(input("vetor:"))))
	nmoni=0
	while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	

-- EXECUTION TIME:
0.758407
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 15
    for i in range(size(media)):
      ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:32:30) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	nmoni=0
	media = (array(eval(input("vetor:"))))
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:32:34) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	nmoni=0
	media = (array(eval(input("vetor:"))))
	
	

-- EXECUTION TIME:
0.953972
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
2
2
2
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
2
2
2
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
2
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:32:35) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	nmoni=0
	media = (array(eval(input("vetor:"))))
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:33:12) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	nmoni=0
	media = (array(eval(input("vetor:"))))
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:33:47) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in range(size(media)):
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	nmoni=0
	media = (array(eval(input("vetor:"))))
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:35:29) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in media:
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	nmoni=0
	media = (array(eval(input("vetor:"))))
	
	

-- EXECUTION TIME:
1.07032
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
vetor:6
vetor:0
vetor:3
vetor:1
vetor:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
vetor:11
vetor:4
vetor:1
vetor:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
vetor:5
vetor:3
vetor:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:35:38) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in media:
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	media = (array(eval(input("vetor:"))))
	
	

-- EXECUTION TIME:
1.16175
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
9
10
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
vetor:11
vetor:15
vetor:16
vetor:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
vetor:5
vetor:8
vetor:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:35:40) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in media:
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	media = (array(eval(input("vetor:"))))
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:36:07) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in media:
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	   print(nmoni)
	media = (array(eval(input("vetor:"))))
	
	

-- EXECUTION TIME:
0.798507
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 10
    print(nmoni)
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:36:20) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in media:
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	   print(nmoni)
	nmoni=0
	media = (array(eval(input("vetor:"))))
	
	

-- ERROR:
File "XXXX", line 10
    print(nmoni)
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:36:23) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in media:
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	   print(nmoni)
	nmoni=0
	media = (array(eval(input("vetor:"))))
	
	

-- ERROR:
File "XXXX", line 10
    print(nmoni)
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:36:24) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in media:
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	   print(nmoni)
	nmoni=0
	media = (array(eval(input("vetor:"))))
	
	

-- EXECUTION TIME:
0.550595
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 10
    print(nmoni)
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:36:25) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in media:
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	   print(nmoni)
	nmoni=0
	media = (array(eval(input("vetor:"))))
	
	

-- EXECUTION TIME:
1.60933
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 10
    print(nmoni)
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:36:31) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in media:
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	nmoni=0
	media = (array(eval(input("vetor:"))))
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:36:36) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))

nmoni=0

while(size(media) > 1):
	for i in media:
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	nmoni=0
	media = (array(eval(input("vetor:"))))
	
	

-- EXECUTION TIME:
1.09102
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:37:58) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))


while(size(media) > 1):
	nmoni=0
	for i in media:
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	media = (array(eval(input("vetor:"))))
	
	

-- EXECUTION TIME:
0.976221
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
vetor:11
vetor:4
vetor:1
vetor:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
vetor:5
vetor:3
vetor:
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:38:08) 
-- CODE:
from numpy import *
media = (array(eval(input("vetor:"))))


while(size(media) > 1):
	nmoni=0
	for i in media:
		if((i>=5) and (i<7)):
			nmoni = nmoni + 1
	print(nmoni)
	media = (array(eval(input("vetor:"))))
	
	

-- EXECUTION TIME:
1.04964
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
